<resources>
    <string name="app_name">STARMOTORS</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="modelo">
        <item>MODELO</item>
        <item>1</item>
    </string-array>
    <string-array name="marca">
        <item>MARCA</item>
        <item>Ford</item>
        <item>Toyota</item>
        <item>Chevrolet</item>
    </string-array>
    <string-array name="falla">
        <item>Seleccione </item>
        <item>Partes mecanicas</item>
        <item>Pintura</item>
        <item>Sistema electrico</item>
    </string-array>

    <string name="cedulaperfil">Cedula</string>
    <string name="nombreperfil">Nombre</string>
    <string name="epellidoperfil">Apellido</string>
    <string name="correoperfil">Correo</string>
    <string name="usuarioperfil">Usuario</string>
    <string name="paswordperfil">Password</string>
    <string name="bntactualizarperfil">Actualizar</string>
    <string name="bntcerrarsesion">Cerrar Sesión</string>

    <string name="cedulacotizar">Cedula</string>
    <string name="nombrecotizar">Nombre</string>
    <string name="epellidocotizar">Apellido</string>
    <string name="correocotizar">Correo</string>
    <string name="fechaNcotizar">Fecha Nacimiento</string>
    <string name="bntfechan">Fecha Nacimiento</string>
    <string name="checkbox">Acepto que "StarMotors" utilice mis datos proporcionados para ponerce en contacto conmigo.</string>
    string>

    <string name="textsolicitud">SOLICITUD GARANTIA</string>
    <string name="buttonSolicitarGarantia">Button</string>string>


</resources>