<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f"
    tools:context=".Perfil_Activity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="416dp"
        android:layout_height="38dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="Perfil"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="178dp"
        android:layout_height="102dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="117dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/ic_baseline_person_pin_24" />

    <Button
        android:id="@+id/bnt_actualizarperfil"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="@string/bntactualizarperfil"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_password" />

    <EditText
        android:id="@+id/editperfil_cedula"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/cedulaperfil"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editperfil_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/editperfil_nombre"
        android:layout_width="318dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/nombreperfil"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editperfil_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_cedula" />

    <EditText
        android:id="@+id/editperfil_apellido"
        android:layout_width="317dp"
        android:layout_height="52dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/epellidoperfil"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editperfil_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_nombre" />

    <EditText
        android:id="@+id/editperfil_correo"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/correoperfil"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editperfil_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_apellido" />

    <EditText
        android:id="@+id/editperfil_password"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/paswordperfil"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bnt_actualizarperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_usuario" />

    <EditText
        android:id="@+id/editperfil_usuario"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/usuarioperfil"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editperfil_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_correo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="@string/bntcerrarsesion"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bnt_actualizarperfil"
        app:layout_constraintTop_toBottomOf="@+id/editperfil_password" />

</androidx.constraintlayout.widget.ConstraintLayout>